--- a/Code_Generation_Model_.ipynb
+++ b/Code_Generation_Model_.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOJnKPkfOwMReQN/1Lkaa9I",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -3097,6 +3099,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sapritanand/Code-Generation-using-LLM/blob/main/Code_Generation_Model_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install PyGithub\n",
@@ -3126,7 +3138,7 @@
         "id": "tqpM3AuRHr6N",
         "outputId": "925061d8-39b7-4f6f-e5d3-7421b69c21c4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3324,7 +3336,7 @@
       "metadata": {
         "id": "SxJ2yGMMH1rH"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3342,7 +3354,7 @@
       "metadata": {
         "id": "Z8hcvqIgIGbz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3377,7 +3389,7 @@
         "id": "_esXg6PxILFm",
         "outputId": "66ad7b09-d678-4d17-aedc-8a81c422e5ac"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3519,7 +3531,7 @@
         "id": "wvBSEMOAIm2r",
         "outputId": "e57fe419-fcba-4f41-93f6-920f1aaa05db"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3666,7 +3678,7 @@
       "metadata": {
         "id": "-jTLydrEI2vO"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3737,7 +3749,7 @@
       "metadata": {
         "id": "AJYarzFnQWQL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3764,7 +3776,7 @@
         "id": "rTIBIHWPTUC5",
         "outputId": "68f6f740-78c7-4ac9-c18c-71595f79c20c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3814,7 +3826,7 @@
         "id": "7Jcut2k-TyhX",
         "outputId": "570b0ad3-e486-47a7-99de-04d6db0589c8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
